--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,7 +15,7 @@
 
 <footer class="footer pt-3">
   <p class="text-center mb-1">
-    <%= t("footer.powered_by", href: link_to(t("greenlight"), "https://bharatlive.ml/", target: "_blank", rel: "noopener")).html_safe %> <%= greenlight::Application::VERSION %>
+    <%= t("footer.powered_by", href: link_to(t("greenlight"), "https://bharatlive.ml/", target: "_blank", rel: "noopener")).html_safe %> <%= Greenlight::Application::VERSION %>
     <% if legal_url.present? %>
       <span>
         |
